# sem2_laba1

./: .gitignore  CMakeLists.txt  array.c  array.h  element.c  element.h  func.c  func.h  main.c  makefile  massive.c  massive.h  matrix.c  matrix.h  tests.cpp
tests/: test_func.cpp
